2007-10-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Added shortcuts for navigate back/forward.

2007-10-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/FileList.cs: File list should not be reorderable.
	  Fixes bug #323471.
	* gtk-gui/gui.stetic,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs: Updated.

2007-10-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Fixed "Bug 325492 -
	  application output buggy".

2007-10-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs: Fixed "Bug 326313 -
	  MD does not remember my Find in Files settings".

2007-10-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: The HIG states that for dialogs that don't need
	  user interaction for the action to complete (Preferences, About, Plugin
	  managers etc), we don't need ellipses in the menu name. Also, removed
	  the "MonoDevelop" from "MonoDevelop Preferences" in the preferences tree
	  (not the title). The application name has no use there and leads to the
	  treeview needing a horizontal scrollbar, which looks bad. Patch by
	  Michael Monreal.

2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/CombineDescriptor.cs,
	  MonoDevelop.Ide.Templates/TextTemplate.cs,
	  MonoDevelop.Ide.Templates/ProjectDescriptor.cs,
	  MonoDevelop.Ide.Commands/ProjectCommands.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ShowAllFilesBuilderExtension.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolder.cs,